# django_api_engine

./: .drone.yml  .flake8  .gitignore  MANIFEST.in  README.md  pump_version.py  pyproject.toml  requirements.txt
.github/workflows/: python-publish.yml
django_api_engine/: __init__.py  apps.py
django_api_engine.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
django_api_engine/admin/: __init__.py
django_api_engine/api_contract/: translation.py
django_api_engine/models/: __init__.py
django_api_engine/tests/: __init__.py
django_api_engine/views/: __init__.py
django_conf/: asgi.py  settings.py  urls.py  wsgi.py
django_example_project/django_api_engine/: __init__.py  apps.py
django_example_project/django_example_project/: asgi.py  settings.py  urls.py  wsgi.py
git_hooks/: pre-commit
